Test Org - Speridian/src/objects/BA_Grievance__c.object
<CustomObject>
    <fields>
        <fullName>Trip_Type__c</fullName>
        <label>Trip Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One Way</fullName>
                </value>
                <value>
                    <fullName>Round Trip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_AuthorizationNumber__c</fullName>
        <label>Authorization Number</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_AuthorizingPCP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorizing PCP</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Grievances (Authorizing PCP)</relationshipLabel>
        <relationshipName>Grievances2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_Carseatneeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Car seat needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>Appeals Process</fullName>
                </value>
                <value>
                    <fullName>CMS Issues</fullName>
                </value>
                <value>
                    <fullName>Privacy</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Plan Benefits</fullName>
                </value>
                <value>
                    <fullName>Quality Of Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_ClaimsAdjudicatedDate__c</fullName>
        <label>Claims Adjudicated Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_DaysOfweek__c</fullName>
        <label>Days of the week</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_DecisionDate__c</fullName>
        <label>Decision Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_DiagnosisCode__c</fullName>
        <label>Diagnosis Code</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Drug__c</fullName>
        <label>Drug</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_ExpeditedStatus__c</fullName>
        <label>Expedited Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Granted</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_ExpeditedVerbalNotification__c</fullName>
        <label>Expedited Verbal Notification</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_ExpeditedWrittenNotification__c</fullName>
        <label>Expedited Written Notification</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_MemberNotified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Member Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_NOPassengers__c</fullName>
        <label>Number of passengers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ba_PickAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pick Address</label>
        <referenceTo>BA_Address__c</referenceTo>
        <relationshipLabel>Grievances</relationshipLabel>
        <relationshipName>Grievances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_PickupTime__c</fullName>
        <label>Pickup Time</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_PrescriptionProvided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prescription Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_ProviderID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Provider ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Grievances</relationshipLabel>
        <relationshipName>Grievances</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_ProviderName__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Provider Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Grievances (Provider Name)</relationshipLabel>
        <relationshipName>Grievances1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_Reason__c</fullName>
        <label>Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ba_RequestType__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Continous</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Resolution__c</fullName>
        <label>Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ba_SpecialRequirement__c</fullName>
        <label>Special Requirement</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ba_StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_TimeframeExtended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Timeframe Extended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_TranportType__c</fullName>
        <label>Tranport Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ambulatory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_TransportDate__c</fullName>
        <label>Transport Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_TransportDestination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transport Destination</label>
        <referenceTo>BA_Address__c</referenceTo>
        <relationshipLabel>Grievances (Transport Destination)</relationshipLabel>
        <relationshipName>Grievances1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_Urgency__c</fullName>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Same Day</fullName>
                </value>
                <value>
                    <fullName>Future</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Vendor__c</fullName>
        <label>Vendor</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_VerbalNotificationDate__c</fullName>
        <label>Verbal Notification Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_WrittenNotificationDate__c</fullName>
        <label>Written Notification Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Grievance</label>
    <nameField>
        <displayFormat>GID-{0000}</displayFormat>
        <label>Grievance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grievances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>